# fastapi-guide

./: .gitignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  schemas.py
api/: :memo:  config.py  main.py  models.py  tests.py
docs/: _config.yml  about.md  guide.md  index.md
docs/assets/css/: style.scss
recaptcha/: test.html  test.py
