[tool.poetry]
name = "fastapi-course"
version = "0.1.0"
description = ""
authors = ["luikymagno <luikymagno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
tortoise-orm = "^0.19.2"
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"
asyncpg = "^0.27.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
